--- a/index.html
+++ b/index.html
@@ -10,12 +10,36 @@
     <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        body{
+            padding-top: 50px;
+        }
+        .starter{
+            padding: 40px 15px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand">Project Name</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
-        <p>你好！</p>
-        <script src="jquery-2.1.4.min.js"></script>
-        <script src="bootstrap.min.js"></script>
+        <div class="starter">
+            <h1>Bootstrap template</h1>
+            <p class="lead">fdsjkajfldsjafjkldsjfkldsjakfjdslajfldsjflksjalkfjsld</p>
+        </div>
     </div>
 </body>
 </html>
